--- a/pom.xml
+++ b/pom.xml
@@ -8,21 +8,58 @@
     <artifactId>spock.mockfree</artifactId>
     <version>1.0.0</version>
 
+    <name>mockfree</name>
+    <description>
+        A Spock plugin for Mock Static methods and remove Final Private restrictions,in a Spock way
+    </description>
+    <url>https://github.com/sayweee/spock-mockfree</url>
+    <developers>
+        <developer>
+            <name>Wind</name>
+            <email>tao.wu@sayweee.com</email>
+            <organization>SayWeee</organization>
+        </developer>
+
+        <developer>
+            <name>wangdengwu</name>
+            <email>dengwu.wang@sayweee.com</email>
+            <organization>SayWeee</organization>
+        </developer>
+    </developers>
+
+    <scm>
+        <url>https://github.com/sayweee/spock-mockfree.git</url>
+        <connection>scm:git:https://github.com/sayweee/spock-mockfree.git</connection>
+        <developerConnection>scm:git:https://github.com/sayweee/spock-mockfree.git</developerConnection>
+    </scm>
+
+    <licenses>
+        <license>
+            <name>Apache 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <auto-service.version>1.0.1</auto-service.version>
-        <spock-core.version>2.1-groovy-3.0</spock-core.version>
+        <spock-core.version>2.2-groovy-3.0</spock-core.version>
         <byte-buddy.version>1.12.14</byte-buddy.version>
         <slf4j.version>2.0.0</slf4j.version>
-        <spock-core.version>2.1-groovy-3.0</spock-core.version>
+        <spock-core.version>2.2-groovy-3.0</spock-core.version>
         <groovy.version>3.0.12</groovy.version>
         <objenesis.version>3.2</objenesis.version>
         <javassist.version>3.29.1-GA</javassist.version>
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <gmavenplus-plugin.version>1.13.1</gmavenplus-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+        <nexus.version>1.6.7</nexus.version>
+        <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
+        <maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
+        <javadoc.version>3.4.1</javadoc.version>
     </properties>
 
     <dependencies>
@@ -106,20 +143,68 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>${maven-source-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${javadoc.version}</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>${nexus.version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>${maven-gpg-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
     <distributionManagement>
-        <repository>
-            <id>nexus-releases</id>
-            <name>nexus-releases</name>
-            <url>http://maven.sayweee.net:8081/repository/maven-releases</url>
-        </repository>
         <snapshotRepository>
-            <id>nexus-snapshots</id>
-            <name>nexus-snapshots</name>
-            <url>http://maven.sayweee.net:8081/repository/maven-snapshots</url>
-            <uniqueVersion>false</uniqueVersion>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
     </distributionManagement>
 </project>
